# project

./: .travis.yml  CMakeLists.txt  aiinterface.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  net_agent.dnn  networkai.cpp  networkai.h  reinforceai.cpp  reinforceai.h  simpleai.cpp  simpleai.h
